--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"fork-ts-checker-webpack-plugin": "^6.3.2",
 		"html-loader": "^2.1.2",
 		"html-webpack-plugin": "^5.3.2",
 		"husky": "^6.0.0",
